September 1, 2009 (ntrel)
  Try loading system support library if user library fails.
  Check support library ABI version matches.

August 31, 2009 (ntrel)
  Print support library path if Geany is in debug mode.

August 28, 2009 (ntrel)
  Upgrade to API 153 except for plugin_key_group change (TODO). This
  removes the "make" tool field, "exec" project field, "BUILD_RUN2"
  keybinding, filetype build commands - the latter might be readded
  if/when the API makes it possible.
  Remove obsolete usage of plugin_key_group symbol.

July 15, 2009 (ntrel)
  Update to API 146 (but require 147).

July 13, 2009 (ntrel)
  Fix using datadir for scripts.

June 24, 2009 (eht16)
  Build libdir and datadir paths on Windows using the installation
  directory as prefix. This still can be improved.

June 23, 2009 (ntrel)
  Look for support library in LIBDIR/geany-plugins/geanylua.
  Read scripts from DATADIR/geany-plugins/geanylua.
  Init plugin_key_group fields to zero in case support library is not
  found.
  Make Help script look in:
  $prefix/share/doc/geany-plugins/geanylua/ - but $prefix is currently
  Geany's install prefix, which works in most cases. Really this
  should be fixed by exposing GeanyLua's $DOCDIR to Lua scripts.

June 19, 2009 (ntrel)
  Move to geany-plugins project, add i18n support.
  Rename from GeanyLua to 'Lua Script'.
  Temporarily fix plugin_configure().

December 5, 2008 (ntrel)
  Update to Geany API v115.

September 17, 2008 (eht16)
  Fix to work with Geany API v93.

September 11, 2008 (ntrel)
  Fix wrong argument for "project-close" signal.
  Fix document signal callbacks to use document pointers.

August 8, 2008 (ntrel)
  Fix to work with Geany API v86.

August 7, 2008 (ntrel)
  Use $(mkdir_p) instead of $(MKDIR_P) in Makefile, so it works with
  automake <= 1.96.

July 17, 2008 (ntrel)
  Fix use of old app macro.
  Fix segfault in last commit in glspi_init() (oops).
  Don't install .svn subdirectories in examples.

July 15, 2008 (ntrel)